Modal almost finished

--- a/app/assets/stylesheets/layout/_form.scss
+++ b/app/assets/stylesheets/layout/_form.scss
@@ -16,6 +16,9 @@
     font-size: 13px;
   }
 }
+.modal-subtitle {
+  text-align: left;
+}
 .modal-content {
   a, p {
     font-size: 13px;
@@ -38,6 +41,7 @@
   }
 }
 #form-inputs {
+  margin-bottom: 5px;
   label {
     font-size: 13px;
   }
