--- a/app/views/users/search_practices.html.erb
+++ b/app/views/users/search_practices.html.erb
@@ -32,7 +32,7 @@
           <div class="col-xs-12 col-sm-8">
             <div class="row-fluid">
               <div class="col-xs-12">
-                <% if current_user.has_practice %>
+                <% if params[:action] == "search_locums" %>
                 <div class="option-flex filter-row">
                   <div class="label-option">
                     <label for="commission">Reversement au remplaçant</label>
