--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -65,10 +65,11 @@
             <% slot.bookings.order(created_at: :asc).each do |booking| %>
             <div class="requests">
               <div class="request-head">
+                <% raise %>
                 <% if booking.user.avatar.nil? %>
                   <%= image_tag "placeholder_pic.png", class: "avatar-large" %>
                 <% else %>
-                  <%= image_tag booking.user.avatar, class: "avatar-large " %>
+                  <%= cl_image_tag booking.user.avatar.path, width: 100, height: 100, crop: :fill, radius: :max %>
                 <% end %>
                 <div class="request-header-info">
                   <%= link_to user_path(booking.user) do %>
@@ -152,7 +153,7 @@
                   <% if booking.slot.user.avatar.nil? %>
                     <%= image_tag "placeholder_pic.png", class: "avatar-large" %>
                   <% else %>
-                    <%= image_tag booking.slot.user.avatar, class: "avatar-large " %>
+                    <%= cl_image_tag booking.user.avatar.path, width: 100, height: 100, crop: :fill, radius: :max %>
                   <% end %>
                   <div class="request-header-info">
                     <%= link_to user_path(booking.slot.user) do %>
