--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,18 +33,21 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
   </head>
   <body>
-    <%= render 'shared/navbar' %>
-    <%= render 'shared/flashes' %>
-    <%= yield %>
+    <div class="main-header">
+      <%= render 'shared/navbar' %>
+      <%= render 'shared/flashes' %>
+    </div>
+    <div class="main-content">
+      <%= yield %>
+    </div>
+    <div class="main-footer">
+      <%= render 'shared/footer' unless @disable_footer %>
+    </div>
+      <%= javascript_include_tag 'application' %>
+      <%= javascript_include_tag "https://maps.google.com/maps/api/js?libraries=places&key=AIzaSyDTZBXNT05Uq6fgWRJnpGeFvENz6c-8qxw" %>
+      <%= javascript_include_tag "https://google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js" %>
+      <%= cloudinary_js_config %>
 
-    <%= javascript_include_tag 'application' %>
-    <%= javascript_include_tag "https://maps.google.com/maps/api/js?libraries=places&key=AIzaSyDTZBXNT05Uq6fgWRJnpGeFvENz6c-8qxw" %>
-    <%= javascript_include_tag "https://google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js" %>
-    <%= cloudinary_js_config %>
-
-    <%= yield(:after_js) %>
-
-    <%= render 'shared/footer' unless @disable_footer %>
-
+      <%= yield(:after_js) %>
   </body>
 </html>
