--- a/app/views/users/search_locums.html.erb
+++ b/app/views/users/search_locums.html.erb
@@ -142,7 +142,7 @@
                       <% if user.avatar.nil? %>
                         <%= image_tag "placeholder_pic.png", class: "avatar-xxl" %>
                       <% else %>
-                        <%= image_tag user.avatar, class: "avatar-xxl" %>
+                        <%= cl_image_tag user.avatar.path, width: 300, height: 300, crop: :fill, radius: :max %>
                       <% end %>
                     </div>
                     <div class="card-content-left">
