Anonymized search page WIP

--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -59,7 +59,7 @@
                 <% end %>
                 <div class="request-header-info">
                   <%= link_to user_path(booking.user) do %>
-                    <p class="request-dr-name">Dr <%= booking.user.first_name %> <%= booking.user.last_name %></p>
+                    <strong>Dr <%= booking.user.first_name %> <%= booking.user.last_name %></strong>
                   <% end %>
                   <p>Du <%= l(booking.start_date, format: "%e %B %Y")  %></p>
                   <p>Au <%= l(booking.end_date, format: "%e %B %Y")  %></p>
@@ -139,7 +139,7 @@
                   <% end %>
                   <div class="request-header-info">
                     <%= link_to user_path(booking.slot.user) do %>
-                      <p class="request-dr-name">Dr <%= booking.slot.user.first_name %> <%= booking.slot.user.last_name %></p>
+                      <strong>Dr <%= booking.slot.user.first_name %> <%= booking.slot.user.last_name %></strong>
                     <% end %>
                     <p>Du <%= l(booking.start_date, format: "%e %B %Y")  %></p>
                     <p>Au <%= l(booking.end_date, format: "%e %B %Y")  %></p>
@@ -152,7 +152,7 @@
                 <hr>
                 <div class="request-buttons">
                   <% if booking.accepted.nil? %>
-                    <em>Demande en attente</em>
+                    <em>Demande en attente - <%= link_to "Annuler", booking_path(booking), method: :delete %></em>
                   <% elsif booking.accepted == false %>
                     <strong>Remplacement refusé</strong>
                   <% elsif booking.accepted && booking.end_date >= Date.today %>
