--- a/app/views/users/search_locums.html.erb
+++ b/app/views/users/search_locums.html.erb
@@ -146,7 +146,11 @@
                       <% end %>
                     </div>
                     <div class="card-content-left">
-                      <h4>Dr. <%= user.first_name %>  <%= user.last_name %></h4>
+                      <% if user_signed_in? %>
+                        <h4>Dr. <%= user.first_name %>  <%= user.last_name %></h4>
+                      <% else %>
+                        <h4><em></em></h4>
+                      <% end %>
                       <% if user.reviews_i_received.size > 0 %>
                         <h4>
                           <%= ("<i class='fa fa-star fa-yellow'></i>" * user.reviews_i_received.average(:rating).to_f.round).html_safe %><%= ("<i class='fa fa-star fa-gray'></i>" * (5 - user.reviews_i_received.average(:rating).to_f.round)).html_safe %>
