--- a/app/views/booking/_form.html.erb
+++ b/app/views/booking/_form.html.erb
@@ -24,5 +24,5 @@
     <%= f.button :submit, "Valider", method: :patch, :class => 'btn btn-primary', style: "width: 100%;" %>
     </div>
   <% end %>
-  <%= link_to "Editer mon profil complet", calendar_path(current_user) %>
+  <%= link_to "Editer mon profil complet", calendar_path(@user) %>
 </div>
