Ajax on delete slots and delete sent bookings on calendar show

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -210,7 +210,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
 
-        <%= render 'booking/form' %>
+        <%= render 'bookings/form' %>
 
       </div>
     </div>
