Ajax on slot creation - WIP

--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -9,10 +9,10 @@
     <div class="col-xs-12">
       <div id="demo"></div>
       <div class="call-to-action text-center">
-        <%= form_tag(user_slots_path(current_user), :method => :post ) do -%>
-        <input id="startDate" name="start_date" type="hidden" value="" />
-        <input id="endDate" name="end_date" type="hidden" value="" />
-        <input id ="sendDates"name='commit' type='submit' class ="btn btn-primary" value='Valider cette plage'/>
+        <%= form_tag(user_slots_path(current_user), :method => :post, remote: true ) do -%>
+          <input id="startDate" name="start_date" type="hidden" value="" />
+          <input id="endDate" name="end_date" type="hidden" value="" />
+          <input id ="sendDates"name='commit' type='submit' class ="btn btn-primary" value='Valider cette plage'/>
         <% end %>
       </div>
     </div>
