--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -26,21 +26,29 @@
 
       <div class="availabilities text-center col-sm-12 col-md-4">
         <h4>Mes périodes de recherche</h4>
-        <% if current_user.slots.nil? %>
-          <i class="fa fa-calendar-minus-o"></i>
-          <div class="empty_availabilities">Vous n'avez pas encore défini de nouvelle plage de recherche <br> Veuillez remplir votre calendrier ci-dessus et valider vos plages</div>
-        <% else %>
-          <% current_user.slots.order(created_at: :asc).each do |slot| %>
-            <% if slot.end_date > Date.today %>
-              <div class="myslots" id="slot-<%= slot.id %>">
-                <p><strong><%= l(slot.start_date, format: "%e %B %Y") %></strong> au <strong><%= l(slot.end_date, format: "%e %B %Y") %></strong></p>
-                <%= link_to user_slot_path(id: slot.id, user_id: current_user.id), remote: true, method: :delete, title: "Confirmer la suppression", data: {confirm: 'Êtes-vous certain de vouloir supprimer ce créneau ?', commit: "Valider", 'commit-class': "btn-primary btn-modal", cancel: "Annuler", 'cancel-class': "btn-default btn-modal" } do %>
-                  <div class="delete-gray"><strong>X</strong></div>
-                <% end %>
-              </div>
+        <div id="slots">
+          <% if current_user.slots.nil? %>
+            <i class="fa fa-calendar-minus-o"></i>
+            <div class="empty_availabilities">Vous n'avez pas encore défini de nouvelle plage de recherche <br> Veuillez remplir votre calendrier ci-dessus et valider vos plages</div>
+          <% else %>
+            <% current_user.slots.order(created_at: :asc).each do |slot| %>
+
+              <%= render 'slots/show', slot: slot %>
+
+       <!--        <%# if slot.end_date > Date.today %>
+                <div class="myslots" id="slot-<%= slot.id %>">
+                  <p><strong><%#= l(slot.start_date, format: "%e %B %Y") %></strong> au <strong><%#= l(slot.end_date, format: "%e %B %Y") %></strong></p>
+                  <%#= link_to user_slot_path(id: slot.id, user_id: current_user.id), remote: true, method: :delete, title: "Confirmer la suppression", data: {confirm: 'Êtes-vous certain de vouloir supprimer ce créneau ?', commit: "Valider", 'commit-class': "btn-primary btn-modal", cancel: "Annuler", 'cancel-class': "btn-default btn-modal" } do %>
+                    <div class="delete-gray"><strong>X</strong></div>
+                  <%# end %>
+                </div>
+              <%# end %> -->
+
+
+
             <% end %>
           <% end %>
-        <% end %>
+        </div>
       </div>
 
       <div class="incoming_demands text-center col-sm-12 col-md-4">
