--- a/app/views/slots/create.js.erb
+++ b/app/views/slots/create.js.erb
@@ -1,15 +1,10 @@
 // app/views/reviews/create.js.erb
 // Here you will write *javascript* that would be executed by the browser
-<% if @slot.errors.any? %>
-  // Render new review form with errors
-  $('#new_slot').html("<%= j render 'reviews/form', restaurant: @restaurant, review: @review %>");
-<% else %>
-  // Create a paragraph for the new review. But hide it.
-  var new_slot = $("<%= j render 'slots/show', slots: @slots %>").hide();
-  // Add it to the DOM, at the end of the existing reviews. It's still hidden.
-  $('#slots').append(new_slot);
-  // Show the new review with an animation!
-  new_slot.slideDown();
-  // Remove the text from the content textarea.
-  // $('#slot_content').val('');
-<% end %>
+// Create a paragraph for the new review. But hide it.
+var new_slot = $("<%= j render 'slots/show', slot: @slot %>").hide();
+// Add it to the DOM, at the end of the existing reviews. It's still hidden.
+$('#slots').prepend(new_slot);
+// Show the new review with an animation!
+new_slot.slideDown();
+// Remove the text from the content textarea.
+// $('#slot_content').val('');
