Delete button for outgoing requests

--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -32,20 +32,7 @@
             <div class="empty_availabilities">Vous n'avez pas encore défini de nouvelle plage de recherche <br> Veuillez remplir votre calendrier ci-dessus et valider vos plages</div>
           <% else %>
             <% current_user.slots.order(created_at: :asc).each do |slot| %>
-
               <%= render 'slots/show', slot: slot %>
-
-       <!--        <%# if slot.end_date > Date.today %>
-                <div class="myslots" id="slot-<%= slot.id %>">
-                  <p><strong><%#= l(slot.start_date, format: "%e %B %Y") %></strong> au <strong><%#= l(slot.end_date, format: "%e %B %Y") %></strong></p>
-                  <%#= link_to user_slot_path(id: slot.id, user_id: current_user.id), remote: true, method: :delete, title: "Confirmer la suppression", data: {confirm: 'Êtes-vous certain de vouloir supprimer ce créneau ?', commit: "Valider", 'commit-class': "btn-primary btn-modal", cancel: "Annuler", 'cancel-class': "btn-default btn-modal" } do %>
-                    <div class="delete-gray"><strong>X</strong></div>
-                  <%# end %>
-                </div>
-              <%# end %> -->
-
-
-
             <% end %>
           <% end %>
         </div>
@@ -142,6 +129,9 @@
             <!-- <h5>un créneau pour lequel vous aviez fait une demande n'existe plus</h5> -->
             <% else %>
               <div class="requests" id="booking-<%= booking.id %>">
+                <%= link_to booking_path(booking), method: :delete, remote: true, title: "Confirmer la suppression", data: {confirm: 'Êtes-vous certain de vouloir supprimer cette demande ?', commit: "Valider", 'commit-class': "btn-primary btn-modal", cancel: "Annuler", 'cancel-class': "btn-default btn-modal" } do %>
+                  <div class="delete-gray"><strong>X</strong></div>
+                <% end %>
                 <div class="request-head">
                   <% if booking.slot.user.avatar.nil? %>
                     <%= image_tag "placeholder_pic.png", class: "avatar-large" %>
@@ -163,7 +153,7 @@
                 <hr>
                 <div class="request-buttons">
                   <% if booking.accepted.nil? %>
-                    <em>Demande en attente - <%= link_to "Annuler", booking_path(booking), method: :delete, remote: true, title: "Confirmer la suppression", data: {confirm: 'Êtes-vous certain de vouloir supprimer cette demande ?', commit: "Valider", 'commit-class': "btn-primary btn-modal", cancel: "Annuler", 'cancel-class': "btn-default btn-modal" } %></em>
+                    <em>Demande en attente</em>
                   <% elsif booking.accepted == false %>
                     <strong>Remplacement refusé</strong>
                   <% elsif booking.accepted && booking.end_date >= Date.today %>
