--- a/app/assets/stylesheets/pages/_calendar.scss
+++ b/app/assets/stylesheets/pages/_calendar.scss
@@ -105,7 +105,8 @@
 .border-between > [class*='col-']:last-child:after {
     display: none;
 }
-.requests{
+.requests {
+  position: relative;
   background-color: white;
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   border-radius: 3px;
