--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -59,7 +59,7 @@
                     </ul>
                   <h3>Activité & cabinet</h3>
                      <ul>
-                    <% if @user.has_practice %>
+                     <!-- User has practice -->
                       <li style = "margin-top: 20px;">
                         <i class="fa fa-fw fa-user-md icon-profile"></i>
                         <%= f.input :convention, placeholder: "#{@user.convention }", collection: [1, 2, 3], label: "Conventionnement secteur" %>
@@ -80,7 +80,7 @@
                         <i class="fa fa-fw fa-money icon-profile"></i>
                         <%= f.input :commission, placeholder: "#{@user.commission }", label: "Versement souhaitée (%)" %>
                       </li>
-                    <% else %>
+                      <!-- User doesn't have practice -->
                       <li style = "margin-top: 20px;">
                         <i class="fa fa-fw fa-suitcase icon-profile"></i>
                         <%= f.input :house_visits_tolerance, placeholder: "#{@user.house_visits_tolerance}", collection: [['Aucune visite à domicile acceptée', 'none'], ["Maximum 2 visites à domicile / jour acceptées", "max2"], ["Visites à domicile acceptées", "above2"]], label: "Visites à domicile" %>
@@ -98,8 +98,7 @@
                         <i class="fa fa-fw fa-money icon-profile"></i>
                         <%= f.input :min_commission, placeholder: "#{@user.min_commission }", label: "Versement minimal souhaité (%)" %>
                       </li>
-                    <% end %>
-                  </ul>
+                    </ul>
                   <h3>Présentation</h3>
                     <ul>
                       <li style = "margin-top: 20px;">
@@ -130,8 +129,6 @@
     $("#accordion").accordion();
 
     $( ".replacement-need" ).change(function() {
-      alert( "Ah oui oui Ah oui oui" );
-
     });
 
   });
