--- a/app/views/users/search_practices.html.erb
+++ b/app/views/users/search_practices.html.erb
@@ -167,7 +167,7 @@
                       <% if user_signed_in? %>
                         <h4>Dr. <%= user.first_name %>  <%= user.last_name %></h4>
                       <% else %>
-                        <h4><em></em></h4>
+                        <h4>Dr. <%= user.first_name %> <%= user.last_name[0].upcase %>.</h4>
                       <% end %>
                       <% if user.reviews_i_received.size > 0 %>
                         <h4>
