--- a/app/assets/stylesheets/layout/_form.scss
+++ b/app/assets/stylesheets/layout/_form.scss
@@ -10,7 +10,8 @@
     padding: 10px 20px;
   }
   .help-block {
-    font-size: 15px;
+    font-size: 13px;
+    font-style: italic;
   }
   a {
     font-size: 13px;
