slot_save refacto without alert

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -106,6 +106,7 @@
   padding: 0 10px;
   font-size: 14px;
   outline: none;
+  width:236px;
 }
 .navbar-wagon-search-input:focus  {
   border: 1px solid #CCCCCC;
