--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,7 @@
         <% else %>
           <form action="/search_practices" class="navbar-wagon-search">
         <% end %>
-            <input type="text" class="navbar-wagon-search-input" name="location" id="user_input_autocomplete_address_navbar" placeholder="Ville ou adresse">
+            <input type="text" class="navbar-wagon-search-input" name="location" id="user_input_autocomplete_address_navbar" placeholder="Recherche par ville ou adresse">
             <input type="hidden" name="unrated" value="true">
             <button type="submit" class="navbar-wagon-search-btn">
               <i class="fa fa-search"></i>
