--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,8 @@
       </h5>
       <% if current_user == @user %>
         <div class="text-center">
-        <%= link_to "Modifier mon profil", edit_user_path(current_user), :class => "btn btn-primary btn-search-home user-edit-button " %>
+        <%= link_to "Modifier mon profil", edit_user_path(current_user), :class => "btn btn-primary btn-search-home user-edit-button" %>
+        <%= link_to "Vérifier mon identité", verify_path(current_user), :class => "btn btn-primary btn-search-home user-edit-button" %>
       </div>
     <% end %>
     </div>
@@ -139,40 +140,41 @@
       </div>
 
       <div class="slots_reviews col-sm-4">
+        <% if current_user != @user %>
+          <div class="col-xs-12">
+            <div class="user_availabilities">
+              <h4>Choisissez un créneau de remplacement</h4>
+              <hr>
+              <% if @user.slots.first.nil? %>
+                <div class="">
+                  <p>Ce docteur n'a pas encore défini de créneau.</p>
+                </div>
+              <%else%>
+                <% @user.slots.each do |slot| %>
+                  <ul class="list-inline list-unstyled text-center">
+                    <% if slot.status == "pending" && slot.end_date > Date.today %>
+                      <% if current_user.numero_ordre.nil? %>
+                        <ul class="list-unstyled">
 
-        <div class="col-xs-12">
-          <div class="user_availabilities">
-            <h4>Choisissez un créneau de remplacement</h4>
-            <hr>
-            <% if @user.slots.first.nil? %>
-              <div class="">
-                <p>Ce docteur n'a pas encore défini de créneau.</p>
-              </div>
-            <%else%>
-              <% @user.slots.each do |slot| %>
-                <ul class="list-inline list-unstyled text-center">
-                  <% if slot.status == "pending" && slot.end_date > Date.today %>
-                    <% if current_user.numero_ordre.nil? %>
-                      <ul class="list-unstyled">
+                          <li class= "single_dispo"><i class="fa fa-fw fa-calendar-plus-o"></i><%= link_to " #{l(slot.start_date, format: "%e %B %Y")} au #{l(slot.end_date, format: "%e %B %Y")}", user_bookings_path(@user, booking: { user_id: current_user.id,slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date }), data: {toggle: "modal", target: "#contacter"}%>
 
-                        <li class= "single_dispo"><i class="fa fa-fw fa-calendar-plus-o"></i><%= link_to " #{l(slot.start_date, format: "%e %B %Y")} au #{l(slot.end_date, format: "%e %B %Y")}", user_bookings_path(@user, booking: { user_id: current_user.id,slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date }), data: {toggle: "modal", target: "#contacter"}%>
+                          </li>
+                        </ul>
+                      <% else %>
+                        <ul class="list-unstyled">
 
-                        </li>
-                      </ul>
-                    <% else %>
-                      <ul class="list-unstyled">
+                          <li class= "single_dispo"><i class="fa fa-fw fa-calendar-plus-o"></i><%= link_to " #{l(slot.start_date, format: "%e %B %Y")} au #{l(slot.end_date, format: "%e %B %Y")}", user_bookings_path(@user, booking: { user_id: current_user.id, slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date }), method: :post, class: "" %>
 
-                        <li class= "single_dispo"><i class="fa fa-fw fa-calendar-plus-o"></i><%= link_to " #{l(slot.start_date, format: "%e %B %Y")} au #{l(slot.end_date, format: "%e %B %Y")}", user_bookings_path(@user, booking: { user_id: current_user.id, slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date }), method: :post, class: "" %>
-
-                        </li>
-                      </ul>
+                          </li>
+                        </ul>
+                      <% end %>
                     <% end %>
-                  <% end %>
-                </ul>
+                  </ul>
+                <% end %>
               <% end %>
-            <% end %>
+            </div>
           </div>
-        </div>
+        <% end %>
 
         <div class="col-xs-12">
           <div class="myprofile-reviews">
