--- a/app/assets/stylesheets/pages/_verify.scss
+++ b/app/assets/stylesheets/pages/_verify.scss
@@ -10,8 +10,11 @@
 }
 .verify-field {
   text-align: left;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 10px;
+  margin: 10px;
+  background-color: $gray-lighter;
+  border-radius: 3px;
+  text-align: center;
   h5 {
     color: $blue;
   }
@@ -25,33 +28,28 @@
     list-style-type: none;
     padding-left: 0;
   }
-  li {
-    display: inline;
+  div {
+    margin: 15px;
   }
 }
-// .attachinary-input {
-//   font-size: 13px;
-//   width: 160px;
-//   color: #fff;
-//   background-color: #00AFC3;
-//   border-color: #0098aa;
-//   display: inline-block;
-//   margin-bottom: 0;
-//   font-weight: normal;
-//   text-align: center;
-//   vertical-align: middle;
-//   -ms-touch-action: manipulation;
-//   touch-action: manipulation;
-//   cursor: pointer;
-//   background-image: none;
-//   border: 1px solid transparent;
-//   white-space: nowrap;
-//   padding: 6px 12px;
-//   font-size: 16px;
-//   line-height: 1.4;
-//   border-radius: 2px;
-//   -webkit-user-select: none;
-//   -moz-user-select: none;
-//   -ms-user-select: none;
-//   user-select: none;
-// }
+.delete-picture {
+  position: absolute;
+  top: -9px;
+  right: -53px;
+  font-size: 10px;
+  font-weight: bold;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 18px;
+  width: 18px;
+  text-align: center;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: $gray-medium;
+  a {
+    font-weight: bold;
+    color: white;
+  }
+}
