--- a/app/views/users/verify.html.erb
+++ b/app/views/users/verify.html.erb
@@ -24,13 +24,15 @@
           <% end %>
           </div>
         </div>
-        <div class="col-xs-12 col-sm-8 verify-field">
-          <h5>Uploadez la photo de votre pièce d'identité (2 fichiers, recto-verso s'il s'agit d'une carte d'identité</h5>
-          <%= simple_form_for(current_user) do |f| %>
-            <%= f.input :numero_ordre, label: false, placeholder: "Numéro RPPS", input_html:  { class: "search-input" } %>
-            <%= f.attachinary_file_field :card_id, as: :attachinary, cloudinary: { folder: "#{current_user.id}_#{current_user.first_name}_#{current_user.last_name}"} %>
-            <%= f.button :submit, "Envoyer", :class => "btn btn-primary btn-search-home user-edit-button" %>
-          <% end %>
+        <div class="col-xs-12 col-sm-8">
+          <div class="verify-field">
+            <h5>Uploadez la photo de votre pièce d'identité (2 fichiers, recto-verso s'il s'agit d'une carte d'identité</h5>
+            <%= simple_form_for(current_user) do |f| %>
+              <%= f.input :numero_ordre, label: false, placeholder: "Numéro RPPS", input_html:  { class: "search-input" } %>
+              <%= f.attachinary_file_field :card_id, as: :attachinary, cloudinary: { folder: "#{current_user.id}_#{current_user.first_name}_#{current_user.last_name}"} %>
+              <%= f.button :submit, "Envoyer", :class => "btn btn-primary btn-search-home user-edit-button" %>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
