--- a/app/assets/stylesheets/pages/_verify.scss
+++ b/app/assets/stylesheets/pages/_verify.scss
@@ -12,32 +12,51 @@
   text-align: left;
   padding: 10px;
   margin: 10px;
-  background-color: $gray-lighter;
-  border-radius: 3px;
-  text-align: center;
-  h5 {
-    color: $blue;
+  .search-input {
+    line-height: 0px;
   }
-  #user_numero_ordre {
-    height: 40px;
-    width: 250px;
+  .form-control {
+    width: 98.5%;
+  }
+  h5 {
+    color: #888;
+    font-size: 14px;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  .form-input {
+    display: flex;
+    align-items: center;
   }
 }
 .attachinary_container {
   ul {
     list-style-type: none;
     padding-left: 0;
+    margin-top: 15px;
+    margin-bottom: 0px;
   }
-  div {
+  li {
     margin: 15px;
+    display: inline;
   }
+  a {
+    font-size: 12px;
+  }
+  a:hover {
+    color: black;
+  }
+}
+.badge-container-picture {
+  position: relative;
+  font-size: 25px;
+  line-height: 30px;
 }
 .delete-picture {
   position: absolute;
-  top: -9px;
-  right: -53px;
-  font-size: 10px;
-  font-weight: bold;
+  top: -24px;
+  right: -7px;
+  font-size: 12px;
   color: white;
   display: flex;
   align-items: center;
@@ -52,4 +71,22 @@
     font-weight: bold;
     color: white;
   }
+}
+
+#user_card_id::-webkit-file-upload-button {
+    visibility: hidden;
+}
+.btn-add-file {
+  flex: 0 0 25%;
+  margin-left: 5px;
+  width: 75px;
+  height: 22px;
+}
+.btn-add-file::before {
+  content: 'Ajouter';
+}
+.btn-validate-upload {
+  margin-left: 5px;
+  margin-right: 5px;
+  width: 98.5%;
 }
