--- a/app/views/users/verify.html.erb
+++ b/app/views/users/verify.html.erb
@@ -25,14 +25,24 @@
           </div>
         </div>
         <div class="col-xs-12 col-sm-8">
-          <div class="verify-field">
-            <h5>Uploadez la photo de votre pièce d'identité (2 fichiers, recto-verso s'il s'agit d'une carte d'identité</h5>
-            <%= simple_form_for(current_user) do |f| %>
-              <%= f.input :numero_ordre, label: false, placeholder: "Numéro RPPS", input_html:  { class: "search-input" } %>
-              <%= f.attachinary_file_field :card_id, as: :attachinary, cloudinary: { folder: "#{current_user.id}_#{current_user.first_name}_#{current_user.last_name}"} %>
-              <%= f.button :submit, "Envoyer", :class => "btn btn-primary btn-search-home user-edit-button" %>
-            <% end %>
-          </div>
+
+              <div class="form-design background verify-field">
+                <%= simple_form_for(current_user) do |f| %>
+                  <%= f.error_notification %>
+                  <div class="form-inputs">
+                    <%= f.input :numero_ordre, label: false, placeholder: "Numéro RPPS", input_html:  { class: "search-input" } %>
+                    <%= f.input :numero_ursaff, label: false, placeholder: "Numéro URSSAF", input_html:  { class: "search-input" } %>
+                    <hr>
+                    <h5>Uploadez la photo de votre pièce d'identité (2 fichiers, recto-verso s'il s'agit d'une carte d'identité) :</h5>
+                    <%= f.attachinary_file_field :card_id, as: :attachinary, cloudinary: { folder: "#{current_user.id}_#{current_user.first_name}_#{current_user.last_name}"} %>
+                  </div>
+                  <br>
+                  <div class="form-actions text-center">
+                    <%= f.button :submit, "Envoyer", :class => 'btn btn-primary btn-search-home user-edit-button btn-validate-upload', style: "width: 100%; margin-bottom: 10px;" %>
+                  </div>
+                <% end %>
+              </div>
+
         </div>
       </div>
     </div>
