--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -9,8 +9,9 @@
           :method => 'post' do |f| %>
             <div class="form-inputs">
               <%#= f.input :email, default: @user.email %>
-              <%= f.input :content, placeholder: "Ecrivez lui un message", :input_html => {:minlength => 10 , maxlength: 300} %>
+              <%= f.input :content, placeholder: "Ecrivez lui un message", label: false, :input_html => {:minlength => 10 , maxlength: 300} %>
             </div>
+            <br>
             <div class="form-actions text-center">
               <%= f.button :submit, "Envoyer", :class => 'btn btn-primary', style: "width: 100%;" %>
             </div>
