--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -169,7 +169,7 @@
                       <% else %>
                         <ul class="list-unstyled">
 
-                          <li class= "single_dispo"><i class="fa fa-fw fa-calendar-plus-o"></i><%= link_to " #{l(slot.start_date, format: "%e %B %Y")} au #{l(slot.end_date, format: "%e %B %Y")}", user_bookings_path(@user, booking: { user_id: current_user.id, slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date }), method: :post, class: "" %>
+                          <li class= "single_dispo"><i class="fa fa-fw fa-calendar-plus-o"></i><%= link_to " #{l(slot.start_date, format: "%e %B %Y")} au #{l(slot.end_date, format: "%e %B %Y")}", user_bookings_path(@user, booking: { user_id: current_user.id, slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date }), method: :post, title: "Confirmer la demande", data: {confirm: 'Êtes-vous certain de vouloir effectuer cette demande ?', commit: "Valider", 'commit-class': "btn-primary btn-modal", cancel: "Annuler", 'cancel-class': "btn-default btn-modal" } %>
 
                           </li>
                         </ul>
