--- a/app/views/users/search_practices.html.erb
+++ b/app/views/users/search_practices.html.erb
@@ -32,19 +32,6 @@
           <div class="col-xs-12 col-sm-8">
             <div class="row-fluid">
               <div class="col-xs-12">
-                <% if params[:action] == "search_locums" %>
-                <div class="option-flex filter-row">
-                  <div class="label-option">
-                    <label for="commission">Reversement au remplaçant</label>
-                  </div>
-                  <div class="slider-values">
-                    <input type="text" name="commission-single" class="text-center slider-values-text" id="commission-single" readonly>
-                  </div>
-                  <div class="slider-bar">
-                    <div id="slider-single" data-value="<%= @min_commission %>"></div>
-                  </div>
-                </div>
-                <% else %>
                 <div class="option-flex filter-row">
                   <div class="label-option">
                     <label for="commission">Reversement au remplaçant</label>
@@ -54,26 +41,6 @@
                   </div>
                   <div class="slider-bar">
                     <div id="slider-range" data-value1="<%= @min_commission %>" data-value2="<%= @max_commission %>"></div>
-                  </div>
-                </div>
-                <% end %>
-              </div>
-            </div>
-            <div class="row-fluid">
-              <div class="col-xs-12">
-                <div class="option-flex filter-row">
-                  <div class="label-option">
-                    <label for="rating">Note des profils</label>
-                  </div>
-                  <div class="slider-values">
-                    <input type="text" name="rating" class="text-center slider-values-text" id="rating" readonly>
-                  </div>
-                  <div class="slider-bar">
-                    <div id="slider-range2" data-value1="<%= @min_rating %>" data-value2="<%= @max_rating %>"></div>
-                  </div>
-                  <div class="slider-margin"></div>
-                  <div class="slider-addon checkbox hidden-xs">
-                    <label><input type="checkbox" name="unrated" value="true" <%= "checked" if @unrated == true %>> Inclure les profils non-notés</label>
                   </div>
                 </div>
               </div>
@@ -115,6 +82,25 @@
                   </div>
                 </div>
               </div>
+          </div>
+          <div class="row-fluid">
+            <div class="col-xs-12">
+              <div class="option-flex filter-row">
+                <div class="label-option">
+                  <label for="rating">Note des profils</label>
+                </div>
+                <div class="slider-values">
+                  <input type="text" name="rating" class="text-center slider-values-text" id="rating" readonly>
+                </div>
+                <div class="slider-bar">
+                  <div id="slider-range2" data-value1="<%= @min_rating %>" data-value2="<%= @max_rating %>"></div>
+                </div>
+                <div class="slider-margin"></div>
+                <div class="slider-addon checkbox hidden-xs">
+                  <label><input type="checkbox" name="unrated" value="true" <%= "checked" if @unrated == true %>> Inclure les profils non-notés</label>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="row">
@@ -203,7 +189,11 @@
                       </ul>
                     </div>
                     <div class="card-tag">
-                      <%= user.commission %>%
+                      <% if user.has_practice && !user.commission.nil? %>
+                        <%= user.commission %>%
+                      <% elsif !user.has_practice && user.min_commission != -5 %>
+                        <%= user.min_commission %>%
+                      <% end %>
                     </div>
                   </div>
                   <hr>
