--- a/app/assets/stylesheets/pages/_user_edit.scss
+++ b/app/assets/stylesheets/pages/_user_edit.scss
@@ -1,3 +1,51 @@
+.left-editing, .right-editing {
+  select, input, textarea {
+    font-size: 13px;
+    font-family: Open Sans;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  textarea {
+    min-height: 100px;
+  }
+  li {
+    margin-top: 0;
+  }
+  h3 {
+    font-size: 15px;
+  }
+}
+.left-editing {
+  border: 1px solid #E6E6E6;
+  border-radius: 6px;
+  padding: 5px;
+}
+#user_avatar::-webkit-file-upload-button {
+  visibility: hidden;
+}
+.flex-fields {
+  display: flex;
+  align-items: center;
+  .flex-icons {
+    flex: 0 0 7%;
+    color: $blue;
+  }
+  .flex-input {
+    flex: 0 0 93%;
+  }
+}
+
+.btn-add-file-edit::before {
+  content: "Changer";
+}
+.btn-add-file-edit {
+  flex: 0 0 25%;
+  margin-left: 0px;
+  width: 75px;
+  height: 22px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+}
 .user-edit-button {
   font-size: 13px;
   width: 160px;
@@ -5,4 +53,7 @@
 
 .right-editing li {
   list-style : none;
+}
+.edit_user_background {
+  background-color: #F9F9FA;
 }
